--- a/dlls/prntvpt/Makefile.in
+++ b/dlls/prntvpt/Makefile.in
@@ -1,6 +1,6 @@
 MODULE    = prntvpt.dll
 IMPORTLIB = prntvpt
-IMPORTS   = winspool ole32 oleaut32
+IMPORTS   = gdi32 winspool ole32 oleaut32
 
 SOURCES = \
 	main.c \
