configure: Define HAVE_WINE_PRELOADER when the preloader is being built.

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -642,6 +642,9 @@
 /* Define to 1 if you have the <valgrind/valgrind.h> header file. */
 #undef HAVE_VALGRIND_VALGRIND_H
 
+/* Define to 1 if the Wine preloader is being used. */
+#undef HAVE_WINE_PRELOADER
+
 /* Define to 1 if you have the <X11/extensions/shape.h> header file. */
 #undef HAVE_X11_EXTENSIONS_SHAPE_H
 
