--- a/configure.ac
+++ b/configure.ac
@@ -2042,6 +2042,7 @@ if test "$wine_use_preloader" = "yes"
 then
   test "$wine_binary" = wine || WINE_IGNORE_FILE(loader/wine-preloader)
   WINELOADER_PROGRAMS="$WINELOADER_PROGRAMS $wine_binary-preloader"
+  AC_DEFINE(HAVE_WINE_PRELOADER, 1, [Define to 1 if the Wine preloader is being used.])
 fi
 
 dnl **** Check for functions ****
