--- a/dlls/quartz/tests/rsrc.rc
+++ b/dlls/quartz/tests/rsrc.rc
@@ -35,3 +35,7 @@ test.mp3 RCDATA "test.mp3"
 /* ffmpeg -f lavfi -i "sine=frequency=600" -t 0.1 -ar 44100 -f wav -acodec pcm_u8 test.wav */
 /* @makedep: test.wav */
 test.wav RCDATA "test.wav"
+
+/* ffmpeg -f lavfi -i smptebars -f lavfi -i "sine=frequency=1000" -t 2.04 -r 25 -f mpeg -vcodec mpeg1video -vf scale=64x48 -acodec mp2 -ar 32k -ab 96k test2.mpg */
+/* @makedep: test2.mpg */
+test2.mpg RCDATA "test2.mpg"
