--- a/dlls/rpcrt4/Makefile.in
+++ b/dlls/rpcrt4/Makefile.in
@@ -4,7 +4,7 @@ IMPORTLIB = rpcrt4
 IMPORTS   = uuid advapi32
 DELAYIMPORTS = iphlpapi wininet secur32 user32 ws2_32 ole32 oleaut32
 
-ndr_types_EXTRAIDLFLAGS = -Oicf
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	cproxy.c \
