sechost: Use fully interpreted IDL stubs.

--- a/dlls/sechost/Makefile.in
+++ b/dlls/sechost/Makefile.in
@@ -3,6 +3,8 @@ IMPORTLIB = sechost
 IMPORTS   = kernelbase
 DELAYIMPORTS = rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	plugplay.idl \
 	security.c \
