--- a/dlls/schedsvc/Makefile.in
+++ b/dlls/schedsvc/Makefile.in
@@ -1,6 +1,8 @@
 MODULE    = schedsvc.dll
 IMPORTS   = rpcrt4 advapi32 ole32 xmllite
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	atsvc.c \
 	atsvc.idl \
