taskschd: Use fully interpreted IDL stubs.

--- a/dlls/taskschd/Makefile.in
+++ b/dlls/taskschd/Makefile.in
@@ -2,6 +2,7 @@ MODULE    = taskschd.dll
 IMPORTS   = oleaut32 ole32 advapi32 xmllite rpcrt4
 
 EXTRADLLFLAGS = -Wb,--prefer-native
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	folder.c \
