--- a/programs/plugplay/Makefile.in
+++ b/programs/plugplay/Makefile.in
@@ -2,6 +2,7 @@ MODULE    = plugplay.exe
 IMPORTS   = advapi32 rpcrt4 user32
 
 EXTRADLLFLAGS = -mconsole -municode
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	main.c \
