rpcss: Use fully interpreted IDL stubs.

--- a/programs/rpcss/Makefile.in
+++ b/programs/rpcss/Makefile.in
@@ -2,6 +2,7 @@ MODULE    = rpcss.exe
 IMPORTS   = rpcrt4 advapi32
 
 EXTRADLLFLAGS = -mconsole -municode
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	epm.idl \
