services: Use fully interpreted IDL stubs.

--- a/programs/services/Makefile.in
+++ b/programs/services/Makefile.in
@@ -2,6 +2,7 @@ MODULE    = services.exe
 IMPORTS   = rpcrt4 advapi32 userenv setupapi
 
 EXTRADLLFLAGS = -mwindows
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	rpc.c \
