--- a/dlls/avifil32/Makefile.in
+++ b/dlls/avifil32/Makefile.in
@@ -2,6 +2,8 @@ MODULE    = avifil32.dll
 IMPORTLIB = avifil32
 IMPORTS   = uuid msacm32 msvfw32 winmm ole32 user32 advapi32 rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	acmstream.c \
 	api.c \
