dispex: Use fully interpreted IDL stubs.

--- a/dlls/dispex/Makefile.in
+++ b/dlls/dispex/Makefile.in
@@ -1,6 +1,8 @@
 MODULE    = dispex.dll
 IMPORTS   = uuid oleaut32 ole32 rpcrt4 advapi32
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	disp_ex.idl \
 	usrmarshal.c
