--- a/dlls/ia2comproxy/Makefile.in
+++ b/dlls/ia2comproxy/Makefile.in
@@ -1,6 +1,8 @@
 MODULE    = ia2comproxy.dll
 IMPORTS   = uuid oleacc oleaut32 ole32 rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	ia2_classes.idl \
 	oleacc_classes.idl
