ieproxy: Use fully interpreted IDL stubs.

--- a/dlls/ieproxy/Makefile.in
+++ b/dlls/ieproxy/Makefile.in
@@ -1,6 +1,8 @@
 MODULE = ieproxy.dll
 IMPORTS = uuid ole32 rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	ieproxy_ieautomation.idl \
 	ieproxy_perhist.idl
