--- a/dlls/msi/Makefile.in
+++ b/dlls/msi/Makefile.in
@@ -2,7 +2,7 @@ MODULE    = msi.dll
 IMPORTLIB = msi
 IMPORTS   = uuid urlmon wininet comctl32 shell32 shlwapi cabinet oleaut32 ole32 version user32 gdi32 advapi32 rpcrt4 sxs imagehlp mspatcha odbccp32 wintrust crypt32
 
-EXTRAIDLFLAGS = --prefix-server=s_
+EXTRAIDLFLAGS = -Oicf --prefix-server=s_
 
 SOURCES = \
 	action.c \
