--- a/dlls/netapi32/Makefile.in
+++ b/dlls/netapi32/Makefile.in
@@ -3,6 +3,8 @@ UNIXLIB   = netapi32.so
 IMPORTLIB = netapi32
 IMPORTS   = rpcrt4 iphlpapi ws2_32 advapi32 dnsapi
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	atsvc.idl \
 	nbcmdqueue.c \
