--- a/dlls/oleacc/Makefile.in
+++ b/dlls/oleacc/Makefile.in
@@ -2,6 +2,8 @@ MODULE    = oleacc.dll
 IMPORTLIB = oleacc
 IMPORTS   = uuid oleaut32 ole32 user32 rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	client.c \
 	main.c \
