--- a/dlls/sti/Makefile.in
+++ b/dlls/sti/Makefile.in
@@ -3,6 +3,7 @@ IMPORTLIB = sti
 IMPORTS   = uuid ole32 oleaut32 rpcrt4 advapi32
 
 EXTRADLLFLAGS = -Wb,--prefer-native
+EXTRAIDLFLAGS = -Oicf
 
 SOURCES = \
 	sti.c \
