--- a/dlls/actxprxy/Makefile.in
+++ b/dlls/actxprxy/Makefile.in
@@ -1,6 +1,8 @@
 MODULE    = actxprxy.dll
 IMPORTS   = uuid oleaut32 ole32 rpcrt4
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	actxprxy_activscp.idl \
 	actxprxy_comcat.idl \
