--- a/dlls/oleaut32/Makefile.in
+++ b/dlls/oleaut32/Makefile.in
@@ -4,6 +4,8 @@ IMPORTLIB = oleaut32
 IMPORTS   = uuid ole32 rpcrt4 user32 gdi32 advapi32
 DELAYIMPORTS = comctl32 urlmon windowscodecs
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	connpt.c \
 	dispatch.c \
