--- a/dlls/quartz/Makefile.in
+++ b/dlls/quartz/Makefile.in
@@ -3,6 +3,8 @@ IMPORTLIB    = quartz
 IMPORTS      = strmiids dxguid strmbase uuid dsound msacm32 msvfw32 ole32 oleaut32 rpcrt4 user32 gdi32 advapi32 winmm
 DELAYIMPORTS = ddraw
 
+EXTRAIDLFLAGS = -Oicf
+
 SOURCES = \
 	acmwrapper.c \
 	avidec.c \
