--- a/dlls/rpcrt4/tests/Makefile.in
+++ b/dlls/rpcrt4/tests/Makefile.in
@@ -2,7 +2,7 @@ TESTDLL   = rpcrt4.dll
 IMPORTS   = oleaut32 ole32 rpcrt4 secur32 advapi32
 EXTRADEFS = -DPROXY_DELEGATION
 
-EXTRAIDLFLAGS = -Oicf --prefix-server=s_
+EXTRAIDLFLAGS = --prefix-server=s_
 server_EXTRAIDLFLAGS = -Os --prefix-client=mixed_
 server_interp_EXTRAIDLFLAGS = -Oicf --prefix-client=interp_
 
