--- a/dlls/odbc32/Makefile.in
+++ b/dlls/odbc32/Makefile.in
@@ -2,6 +2,7 @@ MODULE    = odbc32.dll
 UNIXLIB   = odbc32.so
 IMPORTLIB = odbc32
 IMPORTS   = advapi32
+UNIX_LIBS = $(ODBC_LIBS)
 
 SOURCES = \
 	proxyodbc.c \
