include: Add windows.ui.input.idl.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -888,6 +888,7 @@ SOURCES = \
 	windows.ui.composition.interop.idl \
 	windows.ui.core.idl \
 	windows.ui.idl \
+	windows.ui.input.idl \
 	windows.ui.viewmanagement.idl \
 	windows.ui.xaml.hosting.desktopwindowxamlsource.idl \
 	windowscontracts.idl \
