include: Add some windows.applicationmodel definitions.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -826,6 +826,8 @@ SOURCES = \
 	windef.h \
 	windns.h \
 	windot11.h \
+	windows.applicationmodel.activation.idl \
+	windows.applicationmodel.background.idl \
 	windows.applicationmodel.core.idl \
 	windows.applicationmodel.idl \
 	windows.devices.bluetooth.idl \
