winegstreamer: Implement stubs for h264 encoder.

--- a/dlls/winegstreamer/Makefile.in
+++ b/dlls/winegstreamer/Makefile.in
@@ -19,6 +19,7 @@ SOURCES = \
 	rsrc.rc \
 	unixlib.c \
 	video_decoder.c \
+	video_encoder.c \
 	video_processor.c \
 	wg_allocator.c \
 	wg_format.c \
