makefiles: Hardcode the nls directory.
It's Wine-specific anyway.

--- a/tools/wmc/Makefile.in
+++ b/tools/wmc/Makefile.in
@@ -12,7 +12,7 @@ SOURCES = \
 	write.c
 
 wmc_EXTRADEFS = \
-	-DNLSDIR="\"${nlsdir}\"" \
-	-DBIN_TO_NLSDIR=\"`${MAKEDEP} -R ${bindir} ${nlsdir}`\"
+	-DNLSDIR="\"${datadir}/wine/nls\"" \
+	-DBIN_TO_NLSDIR=\"`${MAKEDEP} -R ${bindir} ${datadir}/wine/nls`\"
 
 INSTALL_DEV = $(PROGRAMS)
