--- a/dlls/ntdll/Makefile.in
+++ b/dlls/ntdll/Makefile.in
@@ -76,5 +76,5 @@ EXTRA_OBJS = unix/version.o
 unix_loader_EXTRADEFS = \
 	-DBINDIR=\"${bindir}\" \
 	-DSYSTEMDLLPATH=\"${system_dllpath}\" \
-	-DDLL_TO_BINDIR=\"`${MAKEDEP} -R ${dlldir} ${bindir}`\" \
+	-DDLL_TO_BINDIR=\"`${MAKEDEP} -R ${libdir}/wine ${bindir}`\" \
 	-DBIN_TO_DATADIR=\"`${MAKEDEP} -R ${bindir} ${datadir}/wine`\"
