include: Add windows.data.json.idl file.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -830,6 +830,7 @@ SOURCES = \
 	windows.applicationmodel.background.idl \
 	windows.applicationmodel.core.idl \
 	windows.applicationmodel.idl \
+	windows.data.json.idl \
 	windows.devices.bluetooth.idl \
 	windows.devices.enumeration.idl \
 	windows.devices.geolocation.idl \
