windows.web: Add stub DLL.

--- a/configure.ac
+++ b/configure.ac
@@ -3267,6 +3267,8 @@ WINE_CONFIG_MAKEFILE(dlls/windows.system.profile.systemmanufacturers)
 WINE_CONFIG_MAKEFILE(dlls/windows.system.profile.systemmanufacturers/tests)
 WINE_CONFIG_MAKEFILE(dlls/windows.ui)
 WINE_CONFIG_MAKEFILE(dlls/windows.ui/tests)
+WINE_CONFIG_MAKEFILE(dlls/windows.web)
+WINE_CONFIG_MAKEFILE(dlls/windows.web/tests)
 WINE_CONFIG_MAKEFILE(dlls/windowscodecs)
 WINE_CONFIG_MAKEFILE(dlls/windowscodecs/tests)
 WINE_CONFIG_MAKEFILE(dlls/windowscodecsext)
