light.msstyles: Add Explorer::ListView subclass.
Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=56861

--- a/dlls/light.msstyles/light.rc
+++ b/dlls/light.msstyles/light.rc
@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2022 Zhiyi Zhang for CodeWeavers
+ * Copyright 2021-2024 Zhiyi Zhang for CodeWeavers
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -899,6 +899,202 @@ BLUE_INI TEXTFILE
 "MinDpi7 = 384\r\n"
 
 "[ListView.ColumnDetail]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"ImageLayout = Vertical\r\n"
+"ImageCount = 1\r\n"
+"SizingMargins = 0, 0, 0, 0\r\n"
+"ImageFile = blue_listview_column_detail.bmp\r\n"
+
+"\r\n; Explorer::ListView\r\n"
+"[Explorer::ListView]\r\n"
+"BgType = BorderFill\r\n"
+"BorderSize = 1\r\n"
+"FillColor = 255 255 255\r\n"
+"BorderColor = 174 174 174\r\n"
+
+"[Explorer::ListView.ListItem(Hot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_explorer_listview_item_hot.bmp\r\n"
+
+"[Explorer::ListView.ListItem(Selected)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"TextColor = 0 0 0\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_explorer_listview_item_selected.bmp\r\n"
+
+"[Explorer::ListView.ListItem(SelectedNotFocus)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_explorer_listview_item_selected_not_focus.bmp\r\n"
+
+"[Explorer::ListView.ListItem(HotSelected)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_explorer_listview_item_hot_selected.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader]\r\n"
+"BgType = None\r\n"
+"Heading1TextColor = 0 0 0\r\n"
+"Heading2TextColor = 0 0 0\r\n"
+"BodyTextColor = 0 0 0\r\n"
+"ContentMargins = 10, 10, 2, 3\r\n"
+"Font = Tahoma, 9\r\n"
+"Heading1Font = Tahoma, 9\r\n"
+"Heading2Font = Tahoma, 9\r\n"
+"BodyFont = Tahoma, 9\r\n"
+
+"[Explorer::ListView.GroupHeader(OpenHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_open_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(OpenSelectedHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_open_selected_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(OpenSelectedNotFocusedHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_open_selected_not_focused_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(OpenMixedSelectionHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_open_mixed_selection_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseSelected)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_selected.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseSelectedHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_selected_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseSelectedNotFocused)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_selected_not_focused.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseSelectedNotFocusedHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_selected_not_focused_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseMixedSelection)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_mixed_selection.bmp\r\n"
+
+"[Explorer::ListView.GroupHeader(CloseMixedSelectionHot)]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 3, 3, 3, 3\r\n"
+"ContentMargins = 1, 1, 1, 1\r\n"
+"ImageFile = blue_listview_group_header_close_mixed_selection_hot.bmp\r\n"
+
+"[Explorer::ListView.GroupHeaderLine]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = Stretch\r\n"
+"ImageLayout = Vertical\r\n"
+"ImageCount = 16\r\n"
+"Transparent = True\r\n"
+"SizingMargins = 0, 0, 0, 0\r\n"
+"ImageFile = blue_listview_group_header_line.bmp\r\n"
+
+"[Explorer::ListView.ExpandButton]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = TrueSize\r\n"
+"ImageLayout = Vertical\r\n"
+"ImageSelectType = Dpi\r\n"
+"TrueSizeScalingType = Dpi\r\n"
+"ImageCount = 3\r\n"
+"ImageFile1 = blue_listview_expand_button_15px.bmp\r\n"
+"ImageFile2 = blue_listview_expand_button_19px.bmp\r\n"
+"ImageFile3 = blue_listview_expand_button_23px.bmp\r\n"
+"ImageFile4 = blue_listview_expand_button_30px.bmp\r\n"
+"ImageFile5 = blue_listview_expand_button_37px.bmp\r\n"
+"ImageFile6 = blue_listview_expand_button_46px.bmp\r\n"
+"ImageFile7 = blue_listview_expand_button_60px.bmp\r\n"
+"MinDpi1 = 96\r\n"
+"MinDpi2 = 120\r\n"
+"MinDpi3 = 144\r\n"
+"MinDpi4 = 192\r\n"
+"MinDpi5 = 240\r\n"
+"MinDpi6 = 288\r\n"
+"MinDpi7 = 384\r\n"
+
+"[Explorer::ListView.CollapseButton]\r\n"
+"BgType = ImageFile\r\n"
+"SizingType = TrueSize\r\n"
+"ImageLayout = Vertical\r\n"
+"ImageSelectType = Dpi\r\n"
+"TrueSizeScalingType = Dpi\r\n"
+"ImageCount = 3\r\n"
+"ImageFile1 = blue_listview_collapse_button_15px.bmp\r\n"
+"ImageFile2 = blue_listview_collapse_button_19px.bmp\r\n"
+"ImageFile3 = blue_listview_collapse_button_23px.bmp\r\n"
+"ImageFile4 = blue_listview_collapse_button_30px.bmp\r\n"
+"ImageFile5 = blue_listview_collapse_button_37px.bmp\r\n"
+"ImageFile6 = blue_listview_collapse_button_46px.bmp\r\n"
+"ImageFile7 = blue_listview_collapse_button_60px.bmp\r\n"
+"MinDpi1 = 96\r\n"
+"MinDpi2 = 120\r\n"
+"MinDpi3 = 144\r\n"
+"MinDpi4 = 192\r\n"
+"MinDpi5 = 240\r\n"
+"MinDpi6 = 288\r\n"
+"MinDpi7 = 384\r\n"
+
+"[Explorer::ListView.ColumnDetail]\r\n"
 "BgType = ImageFile\r\n"
 "SizingType = Stretch\r\n"
 "ImageLayout = Vertical\r\n"
@@ -3305,6 +3501,19 @@ BLUE_LISTVIEW_GROUP_HEADER_OPEN_SELECTED_HOT_BMP BITMAP "blue_listview_group_hea
 
 /* @makedep: blue_listview_group_header_open_selected_not_focused_hot.bmp */
 BLUE_LISTVIEW_GROUP_HEADER_OPEN_SELECTED_NOT_FOCUSED_HOT_BMP BITMAP "blue_listview_group_header_open_selected_not_focused_hot.bmp"
+
+/* Explorer::ListView */
+/* @makedep: blue_explorer_listview_item_hot.bmp */
+BLUE_EXPLORER_LISTVIEW_ITEM_HOT_BMP BITMAP "blue_explorer_listview_item_hot.bmp"
+
+/* @makedep: blue_explorer_listview_item_hot_selected.bmp */
+BLUE_EXPLORER_LISTVIEW_ITEM_HOT_SELECTED_BMP BITMAP "blue_explorer_listview_item_hot_selected.bmp"
+
+/* @makedep: blue_explorer_listview_item_selected.bmp */
+BLUE_EXPLORER_LISTVIEW_ITEM_SELECTED_BMP BITMAP "blue_explorer_listview_item_selected.bmp"
+
+/* @makedep: blue_explorer_listview_item_selected_not_focus.bmp */
+BLUE_EXPLORER_LISTVIEW_ITEM_SELECTED_NOT_FOCUS_BMP BITMAP "blue_explorer_listview_item_selected_not_focus.bmp"
 
 /* Menu */
 /* @makedep: blue_menu_bar_background.bmp */
