configure: Test PE compilers after setting their target argument.
clang will default to the host if no target is specified, which causes
compile test failures if arch-specific CFLAGS are used for a non-host
arch.

--- a/configure.ac
+++ b/configure.ac
@@ -839,55 +839,54 @@ do
     AS_VAR_SET([${wine_arch}_EXTRACFLAGS],["-D__WINE_PE_BUILD -Wall"])
 
     target=""
-    AS_VAR_PUSHDEF([wine_cv_crosscc],[ac_cv_${wine_arch}_crosscc])
-    AS_VAR_IF([${wine_arch}_CC],[false],[],
-        [AC_CACHE_CHECK([whether $CC works],[wine_cv_crosscc],
-            [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
-                [AS_VAR_SET([wine_cv_crosscc],[yes])],[AS_VAR_SET([wine_cv_crosscc],[no])])])])
-    AS_VAR_IF([wine_cv_crosscc],[yes],
-       [set x $CC
-        shift
-        while test $# -ge 1
-        do
-            case "$1" in
-                */*-gcc) target=`expr "$1" : '.*/\(.*\)-gcc'` ;;
-                */*-clang) target=`expr "$1" : '.*/\(.*\)-clang'` ;;
-                *-gcc) target=`expr "$1" : '\(.*\)-gcc'` ;;
-                *-clang) target=`expr "$1" : '\(.*\)-clang'` ;;
-            esac
-            shift
-        done
-
-        dnl Check if cross compiler supports -target argument
-        llvm_target=$target
-        if test -z "$llvm_target"
-        then
-            case $wine_arch in
-            i386) llvm_target=i686-windows ;;
-            arm)  llvm_target=armv7-windows ;;
-            *)    llvm_target=$wine_arch-windows ;;
-            esac
-        fi
-        llvm_extra_cflags="-target $llvm_target -fuse-ld=lld"
-        llvm_extra_ldflags=""
-        case $llvm_target in
-          *windows) llvm_cflags="-Wl,-subsystem:console -Wl,-WX" ;;
+    set x $CC
+    shift
+    while test $# -ge 1
+    do
+        case "$1" in
+            */*-gcc) target=`expr "$1" : '.*/\(.*\)-gcc'` ;;
+            */*-clang) target=`expr "$1" : '.*/\(.*\)-clang'` ;;
+            *-gcc) target=`expr "$1" : '\(.*\)-gcc'` ;;
+            *-clang) target=`expr "$1" : '\(.*\)-clang'` ;;
         esac
-        WINE_TRY_PE_CFLAGS([$llvm_extra_cflags $llvm_cflags --no-default-config],
-                           [llvm_extra_cflags="$llvm_extra_cflags --no-default-config"
-                            llvm_extra_ldflags="--no-default-config"],
-                           [WINE_TRY_PE_CFLAGS([$llvm_extra_cflags $llvm_cflags],[:],
-                                               [llvm_extra_cflags=""])])
-        if test -n "$llvm_extra_cflags"
-        then
-            target=$llvm_target
-            AS_VAR_SET([${wine_arch}_DELAYLOADFLAG],["-Wl,-delayload,"])
-            AS_VAR_APPEND([${wine_arch}_EXTRACFLAGS],[" $llvm_extra_cflags"])
-            AS_VAR_APPEND([${wine_arch}_LDFLAGS],[" $llvm_extra_ldflags"])
-            CFLAGS="$llvm_extra_cflags $llvm_cflags"
-        fi
-        AS_VAR_SET([${wine_arch}_TARGET],[$target])])
-    AS_VAR_POPDEF([wine_cv_crosscc])
+        shift
+    done
+
+    dnl Check if cross compiler supports -target argument
+    llvm_target=$target
+    if test -z "$llvm_target"
+    then
+        case $wine_arch in
+        i386) llvm_target=i686-windows ;;
+        arm)  llvm_target=armv7-windows ;;
+        *)    llvm_target=$wine_arch-windows ;;
+        esac
+    fi
+    llvm_extra_cflags="-target $llvm_target -fuse-ld=lld"
+    llvm_extra_ldflags=""
+    llvm_cflags=""
+    case $llvm_target in
+      *windows) llvm_cflags="-Wl,-subsystem:console -Wl,-WX" ;;
+    esac
+    WINE_TRY_PE_CFLAGS([$llvm_extra_cflags $llvm_cflags --no-default-config],
+                       [llvm_extra_cflags="$llvm_extra_cflags --no-default-config"
+                        llvm_extra_ldflags="--no-default-config"],
+                       [WINE_TRY_PE_CFLAGS([$llvm_extra_cflags $llvm_cflags],[:],
+                                           [llvm_extra_cflags=""])])
+    if test -n "$llvm_extra_cflags"
+    then
+        target=$llvm_target
+        AS_VAR_SET([${wine_arch}_DELAYLOADFLAG],["-Wl,-delayload,"])
+        AS_VAR_APPEND([${wine_arch}_EXTRACFLAGS],[" $llvm_extra_cflags"])
+        AS_VAR_APPEND([${wine_arch}_LDFLAGS],[" $llvm_extra_ldflags"])
+        CFLAGS="$llvm_extra_cflags $llvm_cflags"
+    else
+        AS_VAR_PUSHDEF([wine_cv_crosscc], [wine_cv_${wine_arch}_crosscc])
+        AC_CACHE_CHECK([whether $CC works], wine_cv_crosscc,
+            [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])], [AS_VAR_SET([wine_cv_crosscc],[yes])], [AS_VAR_SET([wine_cv_crosscc],[no])])])
+        AS_VAR_IF([wine_cv_crosscc], [no], [AS_VAR_SET([target],[])])
+        AS_VAR_POPDEF([wine_cv_crosscc])
+    fi
 
     if test -z "$target"
     then
@@ -897,6 +896,7 @@ This is an error since --enable-archs=$wine_arch was requested.])])
         continue
     fi
 
+    AS_VAR_SET([${wine_arch}_TARGET],[$target])
     AS_VAR_PUSHDEF([wine_cv_crosscc_c99],[ac_cv_${wine_arch}_crosscc_c99])
     AC_MSG_CHECKING([for $CC option to enable C99 features])
     AC_CACHE_VAL([wine_cv_crosscc_c99],
